Replaced deprecated code